fixed startup of second java vm with wildcards in path. Connect to process to verify startup was working and shutdown to unblock process